2004-04-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/my-lily-parser.cc (ly:parser-parse-string): New function.

2004-04-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/newaddlyrics.ly: Remove lilypond-book kludge.

	* scripts/lilypond-book.py: LY code that includes \header is
	not assumed to be a fragment.

2004-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stem-tremolo.cc (print): If stem direction == CENTER, move
	tremolo beams up.

	* lily/stem.cc (chord_start_y): Return 0 if no heads.
	(get_default_stem_end_position): No tremolo head juggling if no
	heads.  Fixes tremolo crash on rests (backportme).

	* scripts/abc2ly.py: Oops use [\]proper[ty] 2.2 syntax.

2004-04-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/abc2ly.py: ABC beams preserve support (courtesy Guy
	Gascoigne-Piggford).  Also: TAB and whitespace fixes.

	* lily/lexer.ll: Allow \encoding in NOTES mode.

	* buildscripts/mf-to-table.py (write_fontlist): Use \lyrics
	for lyrics, not for commands.

	* lily/parser.yy (scalar): Bugfix: accept LYRICS_STRING.
	FIXME: Replace some `Music's with Grouped_music_list; fixes make web.

	* input/regression/newaddlyrics.ly: New file.

	* Documentation/topdocs/NEWS.texi: Update.

	* lily/parser.yy (new_lyrics): Return SCM list of lyric musics.
	(Music_list): Allow embedded scm.

	* lily/score.cc (ly:score-bookify): New function.

	* lily/music.cc (ly:music-scorify): Idem.

	* lily/my-lily-parser.cc (ly:parser-print-book): Idem.
	(ly:parser-print-score): Idem.

	* scm/lily.scm (default-toplevel-book-handler): Idem.
	(default-toplevel-music-handler): Idem.
	(default-toplevel-score-handler): Idem.

	* ly/declarations-init.ly: Set default toplevel handlers.

	* lily/parser.yy (book_block, score_block, toplevel_music): Use them.

	* scripts/lilypond-book.py (PREAMBLE_LY): Select classic score
	printer for score at toplevel.

2004-04-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/parser.yy (NEWLYRICS): Switch to LYRICS mode for lyrics.