@@ -1,3 +1,9 @@
+2004-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/my-lily-parser.cc:
+	* lily/my-lily-lexer.cc: Another step towards parsing ly code from
+	SCM string (foo.ly/toto.scm support).
+
 2004-04-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/my-lily-parser.cc (ly:parser-parse-string): New function.
